--- a/docs/1.md
+++ b/docs/1.md
@@ -63,3 +63,8 @@ https://wiki.kache.moe/2019/11/16/iOS-Shadowrocket
 - **本文作者：** cktime
 - **本文链接：** https://cktime.github.io/post/202110231/
 - **版权声明：** 本博客所有文章除特别声明外，均采用[ BY-NC-SA](https://creativecommons.org/licenses/by-nc-sa/4.0/) 许可协议。转载请注明出处！
+
+***
+
+### 下一篇
+[[v2rayNG] | 好用的v2ray安卓/windows客户端](https://github.com/cktime/NetworkFreedom/blob/main/docs/2.md)
