--- a/docs/3.md
+++ b/docs/3.md
@@ -48,3 +48,9 @@ Telegram官网介绍， [点击前往官网](https://telegram.org/)
 - **本文作者：** cktime
 - **本文链接：** https://cktime.github.io/post/202110311/
 - **版权声明：** 本博客所有文章除特别声明外，均采用[ BY-NC-SA](https://creativecommons.org/licenses/by-nc-sa/4.0/) 许可协议。转载请注明出处！
+
+*** 
+
+### 上一篇
+
+[[v2rayNG] | 好用的v2ray安卓/windows客户端](https://github.com/cktime/NetworkFreedom/blob/main/docs/2.md)
